z-index doesnt work on objects with the possition property set to fixed.

--- a/objects.css
+++ b/objects.css
@@ -70,7 +70,6 @@
     height: 300px;
     width: 50px;
     opacity: .5;
-	z-index: 10;
     top: 150px;
 }
 #text {
